--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ flutter:
     - assets/signIn.png
     - assets/signUp.png
     - assets/forgotPasswd.png
+    - assets/anxiety.jpg
 
     # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
