--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.1.0
   shared_preferences: ^2.2.2
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
@@ -62,25 +63,15 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/doc1.png
-    - assets/doc2.png
-    - assets/doc3.png
-    - assets/doc4.png
-    - assets/logoo.png
     - assets/logo.png
-    - assets/login.png
-    - assets/register.png
-    - assets/circle.jfif
+    - assets/psych.png
+    - assets/article.png
+    - assets/appointment.png
     - assets/community.png
     - assets/empathia.png
-    - assets/background.png
-    - assets/Background1.png
-    - assets/Group.png
-    - assets/lotieFile.png
     - assets/signIn.png
     - assets/signUp.png
-    - assets/forgotPasswd.png
-    - assets/anxiety.jpg
+    - assets/forgotpasswd.png
 
     # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
